[gd_scene load_steps=21 format=3 uid="uid://dy7tqxne73x3m"]

[ext_resource type="Script" path="res://scenes/Yeti.gd" id="1_37q5q"]
[ext_resource type="Texture2D" uid="uid://b0ffqhbkea86c" path="res://assets/PC Computer - Spelunky 2 - Yeti Queen.png" id="2_iotvw"]
[ext_resource type="AudioStream" uid="uid://cf0ft80oo6uj2" path="res://assets/Yeti Sound Effects.wav" id="3_ipxep"]
[ext_resource type="AudioStream" uid="uid://bq0gunvvykbi3" path="res://assets/Yeti Cry.wav" id="4_4m0sn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qa0oa"]
size = Vector2(191, 179)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubywl"]
atlas = ExtResource("2_iotvw")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_511k3"]
atlas = ExtResource("2_iotvw")
region = Rect2(1280, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_7exm5"]
atlas = ExtResource("2_iotvw")
region = Rect2(1024, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mds4f"]
atlas = ExtResource("2_iotvw")
region = Rect2(768, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wljdb"]
atlas = ExtResource("2_iotvw")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_if01h"]
atlas = ExtResource("2_iotvw")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_txgdx"]
atlas = ExtResource("2_iotvw")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jm3q"]
atlas = ExtResource("2_iotvw")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6l80"]
atlas = ExtResource("2_iotvw")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_acx0x"]
atlas = ExtResource("2_iotvw")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuo3c"]
atlas = ExtResource("2_iotvw")
region = Rect2(1024, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_akybt"]
atlas = ExtResource("2_iotvw")
region = Rect2(1280, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltui2"]
atlas = ExtResource("2_iotvw")
region = Rect2(1536, 256, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_hdty2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubywl")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_511k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7exm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mds4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wljdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if01h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txgdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jm3q")
}],
"loop": true,
"name": &"kabur",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6l80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acx0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuo3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltui2")
}],
"loop": false,
"name": &"marah",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lfd7p"]
size = Vector2(192, 224)

[node name="Yeti" type="CharacterBody2D"]
position = Vector2(112, 89)
script = ExtResource("1_37q5q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 16.5)
shape = SubResource("RectangleShape2D_qa0oa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 40)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_hdty2")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.68635
flip_h = true

[node name="Area2D" type="Area2D" parent="."]
disable_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 40)
shape = SubResource("RectangleShape2D_lfd7p")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ipxep")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_4m0sn")
volume_db = 6.933

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
